Bug 135216 - FILESAVE DOCX: footer content missing on left-only page style for particular document
Summary: FILESAVE DOCX: footer content missing on left-only page style for particular ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-28 09:03 UTC by Justin L
Modified: 2020-09-09 10:25 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
leftPageFooter.odt: a minimal version of attachment 161941 from bug 133951 (9.16 KB, application/vnd.oasis.opendocument.text)
2020-07-28 09:03 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2020-07-28 09:03:23 UTC
Created attachment 163674 [details]
leftPageFooter.odt: a minimal version of attachment 161941 [details] from bug 133951

The entire footer's content is missing on DOCX export for this particular document.  (I wasn't able to create this from scratch though.)

Steps to reproduce
1.) open leftPageFooter.odt and notice that the footer contains "Footer: 2"
2.) save as .docx format and then close
3.) open docx file and notice that the footer is empty.

Notice that the Left Page style is defined as a "Left page only".  (In DOCX, it remains as left page only, but in DOC it becomes just the default page style - but also without any even page footer content).

Bibisect43all suggests this is inherited from OOo. DOCX was not left-page only before LO 3.5, so it showed the odd page footer, and the even page footer was empty. DOCX exported as left-only already in LO 3.6, but I don't think that is terribly important.
Comment 1 Justin L 2020-07-28 12:53:13 UTC
proposed fix at https://gerrit.libreoffice.org/c/core/+/99628
Comment 2 Commit Notification 2020-08-04 10:08:56 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eb0201b9424ca9cfbbfa7af736cc314cf8f78fca

tdf#135216 sw MSexport: save LeftPageDesc as left page style

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2020-08-08 17:32:46 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/538898d6b9a70d593d9e061f83bed1bffd3987c5

related tdf#135216 writerfilter: don't bRemove para with field

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Justin L 2020-09-09 10:25:44 UTC
(In reply to Commit Notification from comment #3)
> related tdf#135216 writerfilter: don't bRemove para with field
This exposed bug 136589 in how ParaHadField was reset.